[project]
name = "data-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "xlrd>=2.0.2",
]

[tool.ruff]
# Define the check rules
# E: pycodestyle, F: Pyflakes, I: isort (排序), N: pep8-naming (命名規則)
select = ["E", "F", "I", "N"]
# ignore un-use warning
# ignore = ["E501"] # E501= Too long code in single line
[tool.ruff.lint]
# Adjust the ruff detail
